Worked on activity in class

--- a/activity07-joins.Rmd
+++ b/activity07-joins.Rmd
@@ -13,6 +13,12 @@ knitr::opts_chunk$set(error = TRUE)
 Load the entirety of the `{tidyverse}`.
 Be sure to avoid printing out any unnecessary information and give the code chunk a meaningful name.
 
+```{r load packages}
+
+library(tidyverse)
+
+```
+
 
 
 In this activity we will explore joining information that is contained in multiple data files.
@@ -31,6 +37,13 @@ Read each of the three files using `here::here` in combination with the appropri
 Assign each file to a meaningful object name (e.g., `dennys`,`laquinta`, and `states`), be sure to avoid printing any unnecessary information.
 Give your code chunk a meaningful name.
 
+```{r load datasets}
+
+dennys <- readr::read_csv("data/dennys.csv")
+laquinta <- readr::read_csv("data/laquinta.csv")
+states <- readr::read_csv("data/states.csv")
+
+```
 
 
 
@@ -56,33 +69,33 @@ str(states)
 
 #### Denny's data
 
-| Variable    | Type | Brief description                 |
-|-------------|------|-----------------------------------|
-| `address`   |      | street address of dennys location |
-| `city`      |      | city of dennys location           |
-| `state`     |      | state of dennys location          |
-| `zip`       |      | zip code of dennys location       |
-| `longitude` |      | east-west position on Earth       |
-| `latitude`  |      | north-south position on Earth     |
+| Variable    | Type    | Brief description                 |
+|-------------|------   |-----------------------------------|
+| `address`   | chr     | street address of dennys location |
+| `city`      | chr     | city of dennys location           |
+| `state`     | chr     | state of dennys location          |
+| `zip`       | chr     | zip code of dennys location       |
+| `longitude` | num     | east-west position on Earth       |
+| `latitude`  | num     | north-south position on Earth     |
 
 #### La Quinta's data
 
-| Variable    | Type | Brief description                   |
-|-------------|------|-------------------------------------|
-| `address`   |      | street address of laquinta location |
-| `city`      |      | city of laquinta location           |
-| `state`     |      | state of laquinta location          |
-| `zip`       |      | zip code of laquinta location       |
-| `longitude` |      | east-west position on Earth         |
-| `latitude`  |      | north-south position on Earth       |
+| Variable    | Type    | Brief description                   |
+|-------------|------   |-------------------------------------|
+| `address`   | chr     | street address of laquinta location |
+| `city`      | chr     | city of laquinta location           |
+| `state`     | chr     | state of laquinta location          |
+| `zip`       | chr     | zip code of laquinta location       |
+| `longitude` | num     | east-west position on Earth         |
+| `latitude`  | num     | north-south position on Earth       |
 
 #### States data
 
-| Variable       | Type | Brief description             |
-|----------------|------|-------------------------------|
-| `name`         |      | state name                    |
-| `abbreviation` |      | state abbreviation            |
-| `area`         |      | area in thousand square miles |
+| Variable       | Type    | Brief description             |
+|----------------|------   |-------------------------------|
+| `name`         | chr     | state name                    |
+| `abbreviation` | chr     | state abbreviation            |
+| `area`         | num     | area in thousand square miles |
 
 ![](README-img/noun_pause.png) **Planned Pause Point**: If you have any questions, contact your instructor. Otherwise feel free to continue on.
 
@@ -95,14 +108,14 @@ Look at the websites that the data come from (linked above).
 Are there any La Quinta’s locations outside of the US?
 What about Denny’s?
 
-**Response**:
+**Response**: There seems to be at least a few La Quinta's locations outside of the US. Denny's looks like it is only located in the US.
 
 
 If we wanted to do this using the datasets, would we need to ?
 Don’t worry about implementing this yet, you only need to brainstorm some ideas.
 Include at least one idea as your answer, but you are welcome to write down a few options too.
 
-**Response**:
+**Response**: We could combine the dennys and laquinta datasets and look at their longitude and latitude based on the US.
 
 
 ### Preparing to Join
@@ -114,15 +127,29 @@ To do so, *filter* the Denny’s locations for observations where state is *not 
 Do not assign this to anything; we only want to see if we need to be aware of non-US cases.
 If there are any non-US locations, specify where these are.
 
+```{r dennys outside of US}
+
+dennys %>% 
+  filter(!(state %in% states$abbreviation))
+# variable %in% vector
+
+```
 
 
 
-**Response**:
+**Response**: There are no non-US locations.
 
 
 Now do this again, but using `anti_join`.
 To do so, take the Denny's locations and anti-join this with the states dataset.
 Remember to specify your `by` columns.
+
+```{r anti_join}
+
+dennys %>% 
+  anti_join(states, by = c("state"="abbreviation"))
+
+```
 
 
 
@@ -167,7 +194,13 @@ dennys %>%
 
 Determine if La Quinta has any locations that are outside of the US.
 
+```{r La Quinta Locations}
 
+laquinta %>% 
+  anti_join(states, by = c("state" = "abbreviation"))
+
+```
+**It looks like there are 14 La Quinta locations outside of the US
 
 
 #### Isolating US locations
@@ -176,6 +209,11 @@ For the rest of this activity, we will work with the data from the United States
 All Denny's locations in our file are in the US so we do not need to worry about updating this object, but you do need to do some work on the `laquinta` data.
 Create a new object called `laquinta_us` that only contains the locations inside the US.
 
+```{r creating laquinta_us}
+
+
+
+```
 
 
 ### Fewest locations
